login page template by Lakshay Khanagwal

--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
                 <label>UserName</label><br>
                 <input type="text" id="user_name" placeholder="Enter UserName"><br>
                 <label>Password</label><br>
-                <input type="password" id="Password" placeholder="pasword">
+                <input type="password" id="password" placeholder="Pasword">
                 <img src="" onclick="eye()" id="pass_eye"><br>
                 <button id="login_btn" onclick="login()">LogIn</button>
             </div>
